finish backend endpoints

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "karma-webpack": "^2.0.1",
     "locus": "^1.2.0",
     "mocha": "^3.2.0",
+    "morgan": "^1.8.2",
     "node-sass": "^4.3.0",
     "nyc": "^10.1.2",
     "react-addons-test-utils": "^15.4.2",
@@ -63,17 +64,20 @@
   "dependencies": {
     "babel-eslint": "^7.2.2",
     "babel-preset-env": "^1.3.3",
-    "body-parser": "^1.17.1",
+    "bluebird": "^3.5.0",
+    "body-parser": "^1.17.2",
+    "chalk": "^1.1.3",
     "cors": "^2.8.3",
     "express": "^4.15.2",
     "global": "^4.3.1",
     "history": "^4.6.1",
+    "jsonapi-serializer": "^3.5.3",
     "karma-cli": "^1.0.1",
-    "knex": "^0.12.9",
+    "knex": "^0.13.0",
     "lodash": "^4.17.4",
     "nodemon": "^1.11.0",
     "normalize-scss": "^6.0.0",
-    "pg": "^6.1.5",
+    "pg": "^6.2.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
