--- a/.babelrc
+++ b/.babelrc
@@ -3,16 +3,19 @@
       "presets": [
         "env",
         "react",
-        "stage-2"
+        "stage-2",
+        "stage-3"
       ]
     }
   },
   "presets": [
     "react",
     "stage-2",
+    "stage-3",
     ["env", { "modules": false }]
   ],
   "plugins": [
+    "transform-class-properties",
     "react-hot-loader/babel"
   ]
 }
