--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
   "devDependencies": {
     "babel-cli": "^6.22.2",
     "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "^6.4.1",
     "babel-plugin-lodash": "^3.2.11",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-env": "^1.5.1",
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "chai": "^3.5.0",
     "chai-enzyme": "^0.6.1",
     "chai-jsx": "^1.0.1",
@@ -62,8 +66,6 @@
     "webpack-dev-server": "^2.1.0-beta.0"
   },
   "dependencies": {
-    "babel-eslint": "^7.2.2",
-    "babel-preset-env": "^1.3.3",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
     "chalk": "^1.1.3",
@@ -86,6 +88,7 @@
     "react-router-redux": "next",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.1",
+    "redux-promise-middleware": "^4.3.0",
     "redux-thunk": "^2.2.0",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-hot-middleware": "^2.18.0"
