--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "webpack --progress",
     "watch": "webpack --progress --watch",
     "lint": "eslint .",
-    "test": "NODE_ENV=testing karma start"
+    "test": "mocha"
   },
   "repository": "git@github.com:esayler/react-boilerplate.git",
   "author": "Eric Sayler <easayler@gmail.com>",
@@ -27,6 +27,7 @@
     "babel-preset-stage-3": "^6.24.1",
     "chai": "^3.5.0",
     "chai-enzyme": "^0.6.1",
+    "chai-http": "^3.0.0",
     "chai-jsx": "^1.0.1",
     "css-loader": "^0.26.1",
     "enzyme": "^2.7.0",
